--- a/pipelines.yml
+++ b/pipelines.yml
@@ -2,17 +2,17 @@ resources:
   - name: dbp_repo
     type: GitRepo
     configuration:
-      gitProvider: my_github                       # <-- replace with your integration
-      path: jfrog/jfrog-pipelines-docker-sample    # <-- replace with your repository name
+      gitProvider: webappgit                       # <-- replace with your integration
+      path: liav-local-repo    # <-- replace with your repository name
       branches:
         include: master
 
   - name: dbp_image
     type: Image
     configuration:
-      registry: art                                # <-- replace with your artifactory integration
-      sourceRepository: docker_local               # <-- required if registry is Artifactory
-      imageName: kaloula.jfrog-pipelines.com/docker-local/dbp  # < -- replace with your image path and name
+      registry: liav-local-repo                                # <-- replace with your artifactory integration
+      sourceRepository: liav-local-repo               # <-- required if registry is Artifactory
+      imageName: liavacademy.jfrogdev.org/artifactory/liav-local-repo/ # < -- replace with your image path and name
       imageTag: latest
       autoPull: true
       
