--- a/pipelines.yml
+++ b/pipelines.yml
@@ -7,7 +7,7 @@ resources:
       branches:
         include: master
 
-  - name: webinfra
+  - name: webinfra_test
     type: Image
     configuration:
       registry: liav-local-repo                                # <-- replace with your     MyArtifactoryifactory integration
