--- a/pipelines.yml
+++ b/pipelines.yml
@@ -57,7 +57,7 @@ pipelines:
           inputSteps:
             - name: docker_build
           outputResources:
-            - name: webinfra
+            - name: webinfra_test
 
       - name: publish_dbp_build
         type: PublishBuildInfo
