--- a/pipelines.yml
+++ b/pipelines.yml
@@ -12,7 +12,7 @@ resources:
     configuration:
       registry: liav-local-repo                                # <-- replace with your     MyArtifactoryifactory integration
       sourceRepository: liav-local-repo               # <-- required if registry is     MyArtifactoryifactory
-      imageName: liavacademy.jfrogdev.org/artifactory/liav-local-repo/ # < -- replace with your image path and name
+      imageName: liavacademy.jfrogdev.org/artifactory/liav-local-repo/webinfra # < -- replace with your image path and name
       imageTag: latest
       autoPull: true
       
@@ -40,7 +40,7 @@ pipelines:
           affinityGroup: dbp_group
           dockerFileLocation: .
           dockerFileName: Dockerfile
-          dockerImageName: kaloula.jfrog-pipelines.com/docker-local/dbp  # replace with your image path and name
+          dockerImageName: liavacademy.jfrogdev.org/artifactory/liav-local-repo/webinfra  # replace with your image path and name
           dockerImageTag: ${run_number}
           inputResources:
             - name: dbp_repo
