--- a/pipelines.yml
+++ b/pipelines.yml
@@ -63,7 +63,7 @@ pipelines:
           affinityGroup: dbp_group
           targetRepository: docker-local
           integrations:
-            - name: MyArtifactory                            # <-- replace with your     MyArtifactoryifactory integration
+            - name: MyArtifactory                            # <-- new test replace with your     MyArtifactoryifactory integration
           inputSteps:
             - name: docker_build
           outputResources:
