--- a/pipelines.yml
+++ b/pipelines.yml
@@ -18,7 +18,7 @@ resources:
       
 
 pipelines:
-  - name: pipeline_dbp
+  - name: pipeline_build_and_push
     steps:
       - name: docker_build
         type: DockerBuild
