--- a/pipelines.yml
+++ b/pipelines.yml
@@ -12,7 +12,7 @@ resources:
     configuration:
       registry: MyArtifactory                                # <-- replace with your     MyArtifactoryifactory integration
       sourceRepository: prod-repo               # <-- required if registry is     MyArtifactoryifactory
-      imageName: liavacademy.jfrogdev.org/prod-repo/webinfra # < -- replace with your image path and name
+      imageName: liavgoldadev.jfrogdev.org/prod-repo/webinfra # < -- replace with your image path and name
       imageTag: ${run_number}
       autoPull: true
 
