--- a/pipelines.yml
+++ b/pipelines.yml
@@ -6,6 +6,8 @@ resources:
       path: liavgu/Multi_threaded_online_brute_force_template    # <-- replace with your repository name
       branches:
         include: master
+      buildOn:
+        commit: ture
 
   - name: new_docker_image_
     type: Image
