--- a/pipelines.yml
+++ b/pipelines.yml
@@ -7,7 +7,7 @@ resources:
       branches:
         include: master
       buildOn:
-        commit: ture
+        commit: true
 
   - name: new_docker_image
     type: Image
