--- a/PasswordHunter.yml
+++ b/PasswordHunter.yml
@@ -14,7 +14,7 @@ resources:
     configuration:
       registry: MyArtifactory                                
       sourceRepository: base-images               
-      imageName: avigdor.jfrog.io/base-images/base_image/1
+      imageName: base_image:1
       imageTag: ${run_number}
       autoPull: true
 
