--- a/PasswordHunter.yml
+++ b/PasswordHunter.yml
@@ -14,7 +14,7 @@ resources:
     configuration:
       registry: MyArtifactory                                
       sourceRepository: base-images               
-      imageName: base_image:1
+      imageName: base_image
       imageTag: ${run_number}
       autoPull: true
 
@@ -32,7 +32,7 @@ pipelines:
           affinityGroup: build_push
           dockerFileLocation: .
           dockerFileName: Dockerfile
-          dockerImageName: avigdor.jfrog.io/base-images/base_image/1
+          dockerImageName: avigdor.jfrog.io/base-images/base_image
           dockerImageTag: ${run_number}
           inputResources:
             - name: Git_Golda
