--- a/PasswordHunter.yml
+++ b/PasswordHunter.yml
@@ -9,12 +9,21 @@ resources:
       buildOn:
         commit: true
 #
-  - name: PasswordHunter_docker_image
+  - name: PasswordHunter_base_docker_image
     type: Image
     configuration:
       registry: MyArtifactory                                
       sourceRepository: base-images               
       imageName: base_image
+      imageTag: 1
+      autoPull: true
+      
+  - name: PasswordHunter_Prod
+    type: Image
+    configuration:
+      registry: MyArtifactory                                
+      sourceRepository: base-images               
+      imageName: PasswordHunter
       imageTag: ${run_number}
       autoPull: true
 
@@ -33,7 +42,7 @@ pipelines:
           dockerFileLocation: .
           dockerFileName: Dockerfile
           dockerImageName: avigdor.jfrog.io/base-images/base_image
-          dockerImageTag: ${run_number}
+          dockerImageTag: 1
           inputResources:
             - name: Git_Golda
           integrations:
@@ -49,7 +58,7 @@ pipelines:
           inputSteps:
             - name: docker_build
           outputResources:
-            - name: PasswordHunter_docker_image
+            - name: PasswordHunter_Prod
 
       - name: publish_app_build
         type: PublishBuildInfo
