--- a/PasswordHunter.yml
+++ b/PasswordHunter.yml
@@ -15,7 +15,7 @@ resources:
       registry: MyArtifactory                                
       sourceRepository: base-images               
       imageName: base_image
-      imageTag: 1
+      imageTag: "1"
       autoPull: true
       
   - name: PasswordHunter_Prod
