--- a/PasswordHunter.yml
+++ b/PasswordHunter.yml
@@ -42,7 +42,7 @@ pipelines:
           dockerFileLocation: .
           dockerFileName: Dockerfile
           dockerImageName: avigdor.jfrog.io/base-images/base_image
-          dockerImageTag: 1
+          dockerImageTag: "1"
           inputResources:
             - name: Git_Golda
           integrations:
