--- a/PasswordHunter_v2.yml
+++ b/PasswordHunter_v2.yml
@@ -1,5 +1,5 @@
 resources:
-  - name: Git_Golda
+  - name: Git_PH
     type: GitRepo
     configuration:
       gitProvider: PasswordHunterGit                      
@@ -44,7 +44,7 @@ pipelines:
           dockerImageName: avigdor.jfrog.io/base-images/base_image
           dockerImageTag: "1"
           inputResources:
-            - name: Git_Golda
+            - name: Git_PH
           integrations:
             - name: MyArtifactory                           
 
