--- a/PasswordHunter_v2.yml
+++ b/PasswordHunter_v2.yml
@@ -33,7 +33,7 @@ resources:
       sourceArtifactory: MyArtifactory
 
 pipelines:
-  - name: golda_pipeline_v2
+  - name: PH_V1
     steps:
       - name: docker_build
         type: DockerBuild
