--- a/PasswordHunter_v2.yml
+++ b/PasswordHunter_v2.yml
@@ -40,7 +40,7 @@ pipelines:
         configuration:
           affinityGroup: build_push
           dockerFileLocation: .
-          dockerFileName: Dockerfile
+          dockerFileName: Dockerfile_v2
           dockerImageName: avigdor.jfrog.io/base-images/base_image
           dockerImageTag: "1"
           inputResources:
