--- a/PasswordHunter_v2.yml
+++ b/PasswordHunter_v2.yml
@@ -33,14 +33,14 @@ resources:
       sourceArtifactory: MyArtifactory
 
 pipelines:
-  - name: PH_V3
+  - name: PH_V4
     steps:
       - name: docker_build
         type: DockerBuild
         configuration:
           affinityGroup: build_push
           dockerFileLocation: .
-          dockerFileName: Dockerfile_v2
+          dockerFileName: Dockerfile
           dockerImageName: avigdor.jfrog.io/base-images/base_image
           dockerImageTag: "1"
           inputResources:
