--- a/PasswordHunter_v2.yml
+++ b/PasswordHunter_v2.yml
@@ -22,7 +22,7 @@ resources:
     type: Image
     configuration:
       registry: MyArtifactory                                
-      sourceRepository: base-images               
+      sourceRepository: prod-repo               
       imageName: PasswordHunter
       imageTag: ${run_number}
       autoPull: true
