--- a/PasswordHunter_v3.yml
+++ b/PasswordHunter_v3.yml
@@ -33,7 +33,7 @@ resources:
       sourceArtifactory: MyArtifactory
 
 pipelines:
-  - name: PH_V6
+  - name: Test_PH_22
     steps:
       - name: docker_build
         type: DockerBuild
