--- a/PasswordHunter_v3.yml
+++ b/PasswordHunter_v3.yml
@@ -46,7 +46,7 @@ pipelines:
           inputResources:
             - name: Git_PH
           integrations:
-            - name: PasswordHunter_base_docker_image                           
+            - name: MyArtifactory                           
 
       - name: docker_push
         type: DockerPush
