--- a/PasswordHunter_v3.yml
+++ b/PasswordHunter_v3.yml
@@ -45,8 +45,9 @@ pipelines:
           dockerImageTag: "1"
           inputResources:
             - name: Git_PH
+            - name: PasswordHunter_base_docker_image
           integrations:
-            - name: PasswordHunter_base_docker_image                           
+            - name: MyArtifactory                           
 
       - name: docker_push
         type: DockerPush
