--- a/PasswordHunter_v3.yml
+++ b/PasswordHunter_v3.yml
@@ -41,7 +41,7 @@ pipelines:
           affinityGroup: build_push
           dockerFileLocation: .
           dockerFileName: Dockerfile
-          dockerImageName: avigdor.jfrog.io/base-images/base_image
+          dockerImageName: base_image
           dockerImageTag: "1"
           inputResources:
             - name: Git_PH
