--- a/PasswordHunter_v3.yml
+++ b/PasswordHunter_v3.yml
@@ -41,11 +41,10 @@ pipelines:
           affinityGroup: build_push
           dockerFileLocation: .
           dockerFileName: Dockerfile
-          dockerImageName: base_image
-          dockerImageTag: "1"
+          dockerImageName: avigdor.jfrog.io/artifactory/base-images/
+          dockerImageTag: ${run_number}
           inputResources:
             - name: Git_PH
-            - name: PasswordHunter_base_docker_image
           integrations:
             - name: MyArtifactory                           
 
